app last version

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,41 +8,41 @@
     <string name="powered_by_novageo">Powered By</string>
     <string name="String_about">About</string>
     <string name="String_contactos">Contactos</string>
-    <string name="contato_c_mara_municipal_da_amadora">Contato Da J.F. Agualva</string>
-    <string name="v0_2_niugis_viewer">v0.2 niuGIS Viewer</string>
-    <string name="tel_214_369_000">Tel.:219 188 540</string>
+    <string name="contato_c_mara_municipal_da_amadora">J.F.Agualva Mira-Sintra</string>
+    <string name="v0_2_niugis_viewer">v1.1 niuGIS Viewer</string>
+    <string name="tel_214_369_000">Tel: 219 188 540</string>
     <string name="email_geral_cm_amadora_pt">geral@jf-agualvamirasintra.pt </string>
-    <string name="email_info_novageo_com">Email:info@novageo.com</string>
-    <string name="tel_214_213_262">Tel.:214 213 262</string>
-    <string name="fax_214_213_929">Fax.:214 213 929</string>
-    <string name="contatos_novageo">Contatos Novageo</string>
+    <string name="email_info_novageo_com">Email: info@novageo.com</string>
+    <string name="tel_214_213_262">Tel: 214 213 262</string>
+    <string name="fax_214_213_929">Fax: 214 213 929</string>
+    <string name="contatos_novageo">Novageo Solutions, S.A.</string>
     <string name="mudar_mapa">Mudar Mapa</string>
-    <string name="agualva_cac_m">Agualva-Cacém</string>
+    <string name="agualva_cac_m">Agualva Mira-Sintra</string>
     <string name="layers">Layers</string>
     <string name="vias">Vias</string>
     <string name="edif_cios">Edifícios</string>
-    <string name="layer_1">Freguêsia</string>
+    <string name="layer_1">Freguesias</string>
     <string name="layer_2">Edifícios</string>
     <string name="layer_3">Vias</string>
     <string name="layers_menu">Layers Menu</string>
     <string name="fax_219_146_129">Fax: 219 146 129</string>
-    <string name="fonte_google_street_view">Fonte:Open Street Map</string>
+    <string name="fonte_google_street_view">Fonte dos dados: Open Street Map</string>
     <string name="escola_secund_ria_matias_aires">Escola Secundária Matias Aires</string>
-    <string name="tel_esma">Tel.:214338380</string>
-    <string name="fax_esma">Fax:210120029</string>
-    <string name="email_geral_aeams_pt">Email:geral@aeams.pt</string>
-    <string name="site_www_aeams_pt">Site:www.aeams.pt</string>
+    <string name="tel_esma">Tel: 214338380</string>
+    <string name="fax_esma">Fax: 210120029</string>
+    <string name="email_geral_aeams_pt">Email: geral@aeams.pt</string>
+    <string name="site_www_aeams_pt">Site: www.aeams.pt</string>
     <string name="ferrovias">Ferrovias</string>
     <string name="bancos">Bancos</string>
-    <string name="bombas_de_gasolina">Bombas de Gasolina</string>
+    <string name="bombas_de_gasolina">Combustível</string>
     <string name="bombeiros">Bombeiros</string>
     <string name="caf_s">Cafés</string>
     <string name="supermercados">Supermercados</string>
     <string name="restaurantes">Restaurantes</string>
-    <string name="pol_cia">polícia</string>
-    <string name="farmacias">Farmacias</string>
+    <string name="pol_cia">Polícia</string>
+    <string name="farmacias">Farmácias</string>
     <string name="escolas">Escolas</string>
     <string name="correios">Correios</string>
-    <string name="conservat_ria_do_registo_predial">Conservatória do Registo Predial</string>
-    <string name="esta_o_de_comboios">Estação de Comboios</string>
+    <string name="conservat_ria_do_registo_predial">Conservatórias</string>
+    <string name="esta_o_de_comboios">Estação CP</string>
 </resources>
