--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
     <string name="correios">Correios</string>
     <string name="conservat_ria_do_registo_predial">Conservatórias</string>
     <string name="esta_o_de_comboios">Estação CP</string>
+    <string name="freguesia">Freguesia</string>
 </resources>
