alteração do nome do projeto

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,5 @@
     <string name="conservat_ria_do_registo_predial">Conservatórias</string>
     <string name="esta_o_de_comboios">Estação CP</string>
     <string name="freguesia">Freguesia</string>
+    <string name="tel_CMA">tel: 219 188 540</string>
 </resources>
