alteração do nome do projeto

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="android_studio_android_com">android.studio@android.com</string>
     <string name="android_studio">niuGIS Viewer</string>
-    <string name="powered_by_novageo">Powered By</string>
+    <string name="powered_novageo">Powered By</string>
     <string name="String_about">About</string>
     <string name="String_contactos">Contactos</string>
     <string name="contato_c_mara_municipal_da_amadora">J.F.Agualva Mira-Sintra</string>
