--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,6 @@
     <string name="apagar_ponto">Apagar ponto</string>
     <string name="sql_menu_teste">SQL Menu teste</string>
     <string name="sql_teste">SQL teste</string>
+    <string name="Nome_do_ponto">Nome do Ponto</string>
+    <string name="descri_o">Descrição</string>
 </resources>
