--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,5 +53,5 @@
     <string name="sql_teste">SQL teste</string>
     <string name="Nome_do_ponto">Nome do Ponto</string>
     <string name="descri_o">Descrição</string>
-    <string name="verificar">Verificar BD</string>
+    <string name="verificar">Verificar</string>
 </resources>
