commit j - update BD 4 - mudar registo na BD e adicionar pontos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,7 +50,7 @@
     <string name="adicionar_local">testeSQL</string>
     <string name="apagar_ponto">Apagar ponto</string>
     <string name="sql_menu_teste">SQL Menu teste</string>
-    <string name="sql_teste">SQL teste</string>
+    <string name="sql_teste">Criar Novo Ponto</string>
     <string name="Nome_do_ponto">Nome do Ponto</string>
     <string name="descri_o">Descrição</string>
     <string name="verificar">Verificar</string>
