--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,6 +55,7 @@
     <string name="descri_o">Descrição</string>
     <string name="verificar">Verificar</string>
     <string name="tipo">Tipo:</string>
+    <string name="teste">Teste</string>
     <string name="mudar">Mudar</string>
     <string name="delete">Delete</string>
     <string name="morada">Morada:</string>
