--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,7 +43,7 @@
     <string name="farmacias">Farmácias</string>
     <string name="escolas">Escolas</string>
     <string name="correios">Correios</string>
-    <string name="conservat_ria_do_registo_predial">Conservatórias</string>
+    <string name="conservatoria">Conservatórias</string>
     <string name="esta_o_de_comboios">Estação CP</string>
     <string name="freguesia">Freguesia</string>
     <string name="tel_CMA">tel: 219 188 540</string>
